2010-10-22  Ben Abbott <bpabbott@mac.com>

	* plot/legend.m: Trivial fix to allow legend handle to be returned.

2010-10-21  John W. Eaton  <jwe@octave.org>

	* statistics/base/quantile.m: Fix typo in previous change.

2010-10-21  Rik  <octave@nomad.inbox5.com>

	* statistics/distributions/wblcdf.m, statistics/distributions/wblinv.m,
	  statistics/distributions/wblpdf.m, statistics/distributions/wblrnd.m:
	  Fix reversed documentation for shape and scale parameters.

2010-10-21  Ben Abbott <bpabbott@mac.com>

	* io/strread.m: Improve compatibility with Matlab.

2010-10-21  John W. Eaton  <jwe@octave.org>

	* general/private/__isequal__.m: Style fixes.

2010-10-20  Iain Murray <murray@cs.toronto.edu>

	* general/private/__isequal__.m: Fix bug #31239 where 
	isequalwithequalnans is incorrect.

2010-10-20  Rik  <octave@nomad.inbox5.com>

	* polynomial/conv.m: Remove redundant test.
	* signal/fftconv.m: Add tests used by conv.m code.

2010-10-20  Olaf Till  <olaf.till@uni-jena.de>

	* optimization/optimset.m: Use cell2struct instead of struct to
	handle cell arrays as options.

2010-10-20  John W. Eaton  <jwe@octave.org>

	* io/strread.m, optimization/sqp.m, plot/daspect.m,
	plot/pbaspect.m, plot/gnuplot_drawnow.m, plot/isocolors.m,
	plot/isonormals.m, plot/legend.m, plot/print.m,
	plot/private/__interp_cube__.m, plot/__fltk_print__.m,
	plot/__gnuplot_print__.m, plot/__print_parse_opts__.m,
	statistics/base/quantile.m: Style fixes.

2010-10-19  John W. Eaton  <jwe@octave.org>

	* strings/module.mk (strings_FCN_FILES): Include
	strings/untabify.m in the list.
	* strings/untabify.m: Escape { and } characters in docstring.

2010-10-19  Ben Abbott  <bpabbott@mac.com>

	* strings/strjust.m: Add "untabify" and "strrep" to @seealso{} in the
	doc-string.

2010-10-18  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* general/gradient.m, linear-algebra/normest.m,
	plot/__gnuplot_print__.m, plot/__print_parse_opts__.m,
	plot/daspect.m, plot/gnuplot_drawnow.m, plot/pbaspect.m,